# OpenCV

./: README
Cpp/: CMakeLists.txt
Python/: bjoernserver.py  detector.py  xmlclient.py  xmlserver.py
